--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,4 +15,6 @@ COPY . .
 
 RUN python manage.py collectstatic --noinput
 
+EXPOSE 8000
+
 CMD ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000"]
