--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,17 +1,26 @@
-version: '3.3'
-services:
+# infra/docker-compose.yml
+version: '3.8'
 
-  frontend:
-    container_name: foodgram-front
-    build: ../frontend
+services:
+  backend:
+    build: ..
+    ports:
+      - "8000:8000"
     volumes:
-      - ../frontend/:/app/result_build/
+      - ../media:/app/media
+      - ../static:/app/static
+    environment:
+      - DEBUG=True
+      - SECRET_KEY=test-key-123
+      - DATABASE_URL=sqlite:///db.sqlite3
+
   nginx:
-    container_name: foodgram-proxy
-    image: nginx:1.25.4-alpine
+    image: nginx:alpine
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../media:/app/media:ro
+      - ../frontend/build:/usr/share/nginx/html:ro
+    depends_on:
+      - backend
