--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,16 +1,52 @@
 server {
     listen 80;
+    server_name localhost;
     client_max_body_size 10M;
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
+    location /static/ {
+        alias /app/static/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
     }
-    
+
+    location /media/ {
+        alias /app/media/;
+        expires 30d;
+        add_header Cache-Control "public";
+    }
+
+    location /api/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
     location / {
         root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
-      }
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
+        
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+    }
 
+    location /api/docs/ {
+        alias /usr/share/nginx/html/;
+        try_files $uri $uri/ /redoc.html;
+    }
+
+    error_page 404 /index.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
 }
