--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,18 +1,26 @@
-# infra/docker-compose.yml
 version: '3.8'
 
 services:
-  backend:
-    build: ..
-    ports:
-      - "8000:8000"
+  frontend:
+    build: ../frontend
     volumes:
-      - ../media:/app/media
-      - ../static:/app/static
+      - static:/app/result_build/
+
+  backend:
+    build: ../backend
+    volumes:
+      - media:/app/media
+      - type: volume
+        source: static
+        target: /app/static
+        volume:
+          subpath: static
     environment:
       - DEBUG=True
       - SECRET_KEY=test-key-123
       - DATABASE_URL=sqlite:///db.sqlite3
+    depends_on:
+      - frontend
 
   nginx:
     image: nginx:alpine
@@ -20,7 +28,13 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../media:/app/media:ro
-      - ../frontend/build:/usr/share/nginx/html:ro
+      - static:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
+      - media:/var/html/media/
     depends_on:
       - backend
+
+
+volumes:
+  static:
+  media:
