--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,20 +3,26 @@ server {
     server_name localhost;
     client_max_body_size 10M;
 
-    location /static/ {
-        alias /app/static/;
-        expires 30d;
-        add_header Cache-Control "public, immutable";
-    }
-
     location /media/ {
-        alias /app/media/;
+        alias /var/html/media/;
         expires 30d;
         add_header Cache-Control "public";
     }
 
     location /api/ {
         proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    location /api/admin/ {
+        proxy_pass http://backend:8000/admin;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
