--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
     - name: Run Django tests
       run: |
         cd backend
-        python manage.py test --verbosity=2 --noinput
+        python -m pytest --disable-warnings
       env:
         DATABASE_URL: ${{ env.DATABASE_URL }}
         SECRET_KEY: ${{ env.SECRET_KEY }}
@@ -110,7 +110,6 @@ jobs:
         DATABASE_URL: ${{ env.DATABASE_URL }}
         SECRET_KEY: ${{ env.SECRET_KEY }}
 
-  # 3. Сборка Docker образов (опционально)
   build:
     needs: test
     runs-on: ubuntu-latest
