--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,45 +7,119 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  backend_tests:
     runs-on: ubuntu-latest
-    
+
     services:
       postgres:
-        image: postgres:13
+        image: postgres:14-alpine
         env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: test_foodgram
+          POSTGRES_DB: foodgram
+          POSTGRES_USER: foodgram_user
+          POSTGRES_PASSWORD: foodgram_password
         ports:
           - 5432:5432
-    
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.8'
-    
+
     - name: Install dependencies
       run: |
         cd backend
         pip install -r requirements.txt
-    
+
     - name: Run migrations
       run: |
         cd backend
         python manage.py migrate --noinput
       env:
-        SECRET_KEY: test-key-123
-        ALLOWED_HOSTS: "*"
-        DEBUG: "False"
-    
+        SECRET_KEY: 'django-insecure-jf+e1yf0#_+l%u!ekbsi*t6u43$-ziurk!^#xe)pmmwyy)c$i8'
+        DEBUG: False
+        POSTGRES_DB: foodgram
+        POSTGRES_USER: foodgram_user
+        POSTGRES_PASSWORD: foodgram_password
+        DB_HOST: localhost
+        DB_PORT: 5432
+
     - name: Run tests
       run: |
         cd backend
         python -m pytest -v
       env:
-        SECRET_KEY: test-key-123
-        ALLOWED_HOSTS: "*"
-        DEBUG: "False"
+        SECRET_KEY: 'django-insecure-jf+e1yf0#_+l%u!ekbsi*t6u43$-ziurk!^#xe)pmmwyy)c$i8'
+        DEBUG: False
+        POSTGRES_DB: foodgram
+        POSTGRES_USER: foodgram_user
+        POSTGRES_PASSWORD: foodgram_password
+        DB_HOST: localhost
+        DB_PORT: 5432
+
+  build_backend_and_push_to_docker_hub:
+    name: Push Docker image to DockerHub
+    runs-on: ubuntu-latest
+    needs: backend_tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+
+  build_frontend_and_push_to_docker_hub:
+    name: Push frontend Docker image to DockerHub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+
+  build_gateway_and_push_to_docker_hub:
+    name: Push gateway Docker image to DockerHub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v5
+        with:
+          context: ./gateway/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_gateway:latest
