--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,12 +1,17 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name ${SERVER_NAME};
     client_max_body_size 10M;
 
     location /media/ {
         alias /var/html/media/;
         expires 30d;
         add_header Cache-Control "public";
+    }
+
+    location /api/docs {
+        root /var/html;
+        try_files $uri $uri/redoc.html;
     }
 
     location /api/ {
@@ -42,11 +47,6 @@ server {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
-    }
-
-    location /api/docs/ {
-        alias /usr/share/nginx/html/;
-        try_files $uri $uri/ /redoc.html;
     }
 
     error_page 404 /index.html;
