--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,36 +1,56 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres:14-alpine
+    restart: unless-stopped
+    env_file:
+      - .env
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
   frontend:
     build: ../frontend
+    env_file:
+      - .env
     volumes:
       - static:/app/result_build/
 
   backend:
     build: ../backend
+    restart: unless-stopped
+    env_file:
+      - .env
     volumes:
       - media:/app/media
       - static:/static
-    environment:
-      - DEBUG=True
-      - SECRET_KEY=test-key-123
-      - DATABASE_URL=sqlite:///db.sqlite3
     depends_on:
+      - db
       - frontend
 
-  nginx:
-    image: nginx:alpine
+  gateway:
+    build:
+      context: ../
+      dockerfile: gateway/Dockerfile
+    restart: unless-stopped
+    env_file:
+      - .env
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
       - media:/var/html/media/
     depends_on:
       - backend
 
 
 volumes:
+  pg_data:
   static:
   media:
